# COL862_project_

./: README.md
Lazylog/: CMakeLists.txt  config.txt  failover_test.sh  run_complete.sh  run_multiple_append.sh
Lazylog/client/: append_client.cpp
Lazylog/include/: sequencer.h  sequencer_log.h  sequencer_server.h  sequencer_state.h
Lazylog/proto/: sequencer.proto  sequencer_internal.proto
Lazylog/src/: main.cpp  sequencer.cpp  sequencer_log.cpp  sequencer_server.cpp  tests.cpp
lazylog_new_zookeeper/: Makefile  client.cpp  common.h  main.cpp  sequencer.cpp  shard.cpp
